:bug: Fixes `Show password` text sometimes overflow

--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -105,7 +105,7 @@
             padding: 0;
 
             @media only screen and (min-width: 200px) {
-                margin-left: -40%;
+                margin-left: -30%;
                 margin-top: 1%;
             }
             @media only screen and (min-width: 600px) {
@@ -113,7 +113,7 @@
                 margin-top: 1%;
             }
             @media only screen and (min-width: 1000px) {
-                margin-left: -30%;
+                margin-left: -40%;
                 margin-top: 1.4%;
             }
             @media only screen and (min-width: 1400px) {
@@ -139,29 +139,17 @@
                     height: 2.4vh;
                 }
 
-                margin: 0 5% 0 0;
+                margin: 0 .6rem 0 0;
                 padding: 0;
 
                 cursor: pointer;
             }
 
-            // TODO design: fix sometimes text overflow
             p {
                 margin: 0;
                 font-size: 1.2rem;
 
-                @media only screen and (min-width: 200px) {
-                    width: 30vw;
-                }
-                @media only screen and (min-width: 600px) {
-                    width: 24vw;
-                }
-                @media only screen and (min-width: 1000px) {
-                    width: 15vw;
-                }
-                @media only screen and (min-width: 1400px) {
-                    width: 12vw;
-                }
+                width: 100%;
             }
         }
     }
