--- a/src/styles/SnowFlakes.css
+++ b/src/styles/SnowFlakes.css
@@ -6,18 +6,15 @@
   height: 100vh;
   overflow: hidden;
   pointer-events: none;
-  background: none !important;
-}
-.snowflakes .snowflake {
-  overflow: hidden;
-  opacity: 1;
-  pointer-events: none;
-  background-color: #ADD8E6;
-  background: none !important;
-}
-.snowflakes .snowflake img {
-  height: 12px;
-  width: 12px;
-}
+  background: none !important; }
+  .snowflakes .snowflake {
+    overflow: hidden;
+    opacity: 1;
+    pointer-events: none;
+    background-color: #ADD8E6;
+    background: none !important; }
+    .snowflakes .snowflake img {
+      height: 12px;
+      width: 12px; }
 
 /*# sourceMappingURL=SnowFlakes.css.map */
